@@ -1207,14 +1207,18 @@ static Image *ReadWPGImage(const ImageInfo *image_info,
                                           (size_t) (1U<<bpp)*sizeof(PixelPacket));
                 }
 
-              if (bpp == 1)
+              if(bpp == 1)
                 {
-                  if(image->colormap[0].red==0 &&
-                     image->colormap[0].green==0 &&
-                     image->colormap[0].blue==0 &&
-                     image->colormap[1].red==0 &&
-                     image->colormap[1].green==0 &&
-                     image->colormap[1].blue==0)
+                  if(image->colors<=0)
+				  {
+			        image->colormap[0].red =
+                        image->colormap[0].green =
+                        image->colormap[0].blue = 0;
+                      image->colormap[0].opacity = OpaqueOpacity;
+				  }
+                  if(image->colors<=1 ||	/* Realloc has been enforced and value [1] remains uninitialised, or .. */
+					   (image->colormap[0].red==0 && image->colormap[0].green==0 && image->colormap[0].blue==0 &&
+                        image->colormap[1].red==0 && image->colormap[1].green==0 && image->colormap[1].blue==0))
                     {  /* fix crippled monochrome palette */
                       image->colormap[1].red =
                         image->colormap[1].green =
